Made the website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Presidental Election Day in the United States</title>
+    <link rel="stylesheet" href="css/styles.css">
 
+    <!-- custom font stuff -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- navbar thingy -->
+    <nav>
+        <div class="nav-container">
+            <div class="logo"><img src="images/usaFlag.png" width="150" height="85"></div>
+            <ul class="nav-menu">
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="index.html#history">History</a></li>
+                <li><a href="index.html#voteInfo">How Voting Works</a></li>
+                <li><a href="index.html#facts">Key Facts</a></li>
+                <li><a href="index.html#voteMatters">Why Your Vote Matters</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <h1>Presidental Election Day in the United States</h1>
+    <h2 class="subtitle">Understanding the Importance of Voting</h2>
+    <hr>
+
+    <!-- section that explains what voting is -->
+    <section id="home">
+        <h2>What is Voting?</h2>
+        <p>Presidential Election Day in the United States is a major civic event held every four years. It marks a time when Americans exercise their democratic right to vote for the President, reflecting the principles of democracy.</p>
+        <img class="pImg" src="images/usaFlagWave.png" width="400" height="250">
+    </section>
+
+    <hr>
+
+    <!-- section that explains the history of voting in america -->
+    <section id="history">
+        <h2>The History of Voting</h2>
+        <p>The tradition of holding elections on the first Tuesday after the first Monday in November was established in 1845. This date was chosen to accommodate rural farmers who needed to travel to polling stations after the harvest.</p>
+        <img class="pImg" src="images/the-new-york-public-library-RPHfplVYsmA-unsplash.jpg" width="400" height="300">
+    </section>
+
+    <hr>
+
+    <!-- section that explains how voting works -->
+    <section id="voteInfo">
+        <h2>How Voting Works</h2>
+        <p>Americans can vote in person at polling stations or by mail. Each state's votes contribute to the Electoral College, a system that ultimately determines the winner.</p>
+        <img class="pImg" src="images/votingBooth.png" width="400" height="250">
+    </section>
+
+    <hr>
+
+    <!-- section that has facts in it or something -->
+    <section id="facts">
+        <h2>Key Facts about Voting</h2>
+        <ul>
+            <li>The minimum voting age in the United States / Democratic States of America is 18.</li>
+            <li>Each state has different methods and requirements for registration and voting.</li>
+            <li>In some states, Election Day is a public holiday. As of 2038, in the Republic of the United States (R.U.S.), it's recognized officially as a national holiday!</li>
+        </ul>
+    </section>
+    
+    <!-- copyright / disclaimer footer -->
+    <footer>&copy; 2040 Electoral College of the Democratic States of America (ECDSA). All rights remain reserved. This content is for educational purposes only. This content does not reflect the government of the Republic of the United States.</footer>
+</body>
+</html>
